--- a/03-project.ipynb
+++ b/03-project.ipynb
@@ -72,6 +72,7 @@
     "\n",
     "Find a theoretical calculation of the normal modes of a triatomic system with different masses and show that your numerical solution agrees with the theoretical calculation.\n",
     "\n",
+    "**For a diatomic molecule explore the frequency on the mass of the attoms.**\n",
     "### Option 4\n",
     "\n",
     "In Section 6.5 of *Computational Modeling and Visualization of Physical Systems with Python*, Jay Wang gives the wave equation for a string. This is a partial differential equation (PDE). While we modeled the string using coupled oscillators, he derives the PDE for a continuous string. Then he shows how to solve the PDE using the finite difference method (FDM).\n",
