--- a/project3.ipynb
+++ b/project3.ipynb
@@ -2,10 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "c6cc79f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div id=\"glowscript\" class=\"glowscript\"></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "if (typeof Jupyter !== \"undefined\") { window.__context = { glowscript_container: $(\"#glowscript\").removeAttr(\"id\")};}else{ element.textContent = ' ';}"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -22,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "68c321b1",
    "metadata": {},
    "outputs": [
@@ -44,7 +69,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/tr/835jh49j3bg3ld_f_wmjxvd80000gn/T/ipykernel_95958/2437490562.py:37: RuntimeWarning: invalid value encountered in sqrt\n",
+      "/var/folders/tr/835jh49j3bg3ld_f_wmjxvd80000gn/T/ipykernel_64761/2437490562.py:37: RuntimeWarning: invalid value encountered in sqrt\n",
       "  omegas = np.sqrt(lamb)\n"
      ]
     }
@@ -94,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "6f4ac52f",
    "metadata": {},
    "outputs": [],
@@ -132,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "3dcfb914",
    "metadata": {},
    "outputs": [
@@ -155,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "8f5a0639",
    "metadata": {},
    "outputs": [],
@@ -163,29 +188,34 @@
     "def animate(u):\n",
     "    ####################################\n",
     "    scene=canvas()\n",
-    "\n",
+    "    \n",
     "    scene.background=color.white\n",
     "    scene.fov = 0.1\n",
-    "\n",
+    "    \n",
     "    thick = L0/20\n",
     "    height=L0/2\n",
-    "\n",
+    "    R=L0/10\n",
+    "    R2=R/4\n",
+    "    \n",
     "    balls=[]\n",
     "    xballs = np.linspace(-L/2,L/2,N)\n",
-    "\n",
+    "    \n",
     "    springs=[]\n",
-    "\n",
+    "    \n",
     "    Lwall = box(pos = vec(-L/2, 0, 0), size = vec(thick, L, L), color=color.white)\n",
-    "    spring = helix(pos=Lwall.pos, axis=vec(L0,0,0), color=color.orange, radius=L0/10)\n",
+    "    spring = helix(pos=Lwall.pos, axis=vec(L0,0,0), color=color.orange, radius=R)\n",
     "    springs.append(spring)\n",
+    "    \n",
+    "    ball = sphere(pos=spring.pos+vector(L/4,R-R2,0), radius=R, color=color.green)\n",
+    "    balls.append(ball)\n",
     "    \n",
     "    i = 0\n",
     "    \n",
     "    for x in xballs:\n",
-    "        ball = sphere(pos=vec(x,0,0), radius=L0/10, color=color.red)\n",
+    "        ball = sphere(pos=spring.pos, radius=L0/10, color=color.red)\n",
     "        ball.eq = x\n",
     "        balls.append(ball)\n",
-    "        if i < N-1: #no spring to the right of the last mass\n",
+    "        if i < N: #Spring to right of last mass\n",
     "            spring = helix(pos=ball.pos, axis=vec(L0,0,0), color=color.orange, radius=ball.radius/2)\n",
     "            springs.append(spring)\n",
     "        i = i + 1\n",
@@ -197,27 +227,26 @@
     "    for i in range(0, len(springs)):\n",
     "        spring = springs[i]\n",
     "        spring.pos=balls[i].pos\n",
-    "        spring.axis=balls[i+1].pos-spring.pos\n",
+    "        spring.axis=balls[i].pos-spring.pos\n",
     "    \n",
-    "    \n",
-    "#     #animate\n",
-    "#     scene.pause()\n",
-    "#     t=0\n",
-    "#     for n in range(len(u[:,0])):\n",
-    "#         rate(300)\n",
-    "#         for i in range(len(balls)):\n",
-    "#             ball = balls[i]\n",
-    "#             ball.pos.x = ball.eq + u[n,i+1]\n",
-    "#         for i in range(len(springs)):\n",
-    "#             spring = springs[i]\n",
-    "#             spring.pos = balls[i].pos\n",
-    "#             spring.axis = balls[i+1].pos-spring.pos \n",
+    "    #animate\n",
+    "    scene.pause()\n",
+    "    t=0\n",
+    "    for n in range(len(u[:,0])):\n",
+    "        rate(300)\n",
+    "        for i in range(len(balls)):\n",
+    "            ball = balls[i]\n",
+    "            ball.pos.x = ball.eq + u[n,i+1]\n",
+    "        for i in range(len(springs)):\n",
+    "            spring = springs[i]\n",
+    "            spring.pos = balls[i].pos\n",
+    "            spring.axis = balls[i+1].pos-spring.pos \n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "177081bf",
    "metadata": {},
    "outputs": [
@@ -246,15 +275,15 @@
      "output_type": "display_data"
     },
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
+     "ename": "AttributeError",
+     "evalue": "'sphere' object has no attribute 'eq'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/tr/835jh49j3bg3ld_f_wmjxvd80000gn/T/ipykernel_95958/1503536199.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0manimate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/var/folders/tr/835jh49j3bg3ld_f_wmjxvd80000gn/T/ipykernel_95958/409622750.py\u001b[0m in \u001b[0;36manimate\u001b[0;34m(u)\u001b[0m\n\u001b[1;32m     36\u001b[0m         \u001b[0mspring\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msprings\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m         \u001b[0mspring\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpos\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mballs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m         \u001b[0mspring\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mballs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpos\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mspring\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/tr/835jh49j3bg3ld_f_wmjxvd80000gn/T/ipykernel_64761/1503536199.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0manimate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mu\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/var/folders/tr/835jh49j3bg3ld_f_wmjxvd80000gn/T/ipykernel_64761/699472951.py\u001b[0m in \u001b[0;36manimate\u001b[0;34m(u)\u001b[0m\n\u001b[1;32m     37\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mballs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[0mball\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mballs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m         \u001b[0mball\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mball\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meq\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mu\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     40\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msprings\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m         \u001b[0mspring\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msprings\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'sphere' object has no attribute 'eq'"
      ]
     }
    ],
@@ -265,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e480f1ee",
+   "id": "05394526",
    "metadata": {},
    "outputs": [],
    "source": []
